--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyadministrator.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyadministrator.yml
@@ -36,6 +36,7 @@
         RMCSkillIntel: 1
         RMCSkillDomestics: 1
         RMCSkillNavigations: 1
+        RMCSkillFirearms: 1
     - type: JobPrefix
       prefix: au14-job-prefix-colonyadministrator
     - type: TacticalMapIcon
