--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyemergencyresponseofficer.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyemergencyresponseofficer.yml
@@ -31,6 +31,7 @@
         RMCSkillMedical: 2
         RMCSkillCqc: 1
         RMCSkillMeleeWeapons: 1
+        RMCSkillFirearms: 1
     - type: JobPrefix
       prefix: au14-job-prefix-emergencyresponseofficer
     - type: TacticalMapIcon
