--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyengineer.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyengineer.yml
@@ -24,6 +24,7 @@
         RMCSkillVehicles: 1
         RMCSkillDomestics: 1
         RMCSkillEngineer: 4
+        RMCSkillFirearms: 1
         RMCSkillConstruction: 4
         RMCSkillPowerLoader: 2
     - type: JobPrefix
