--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyethicsandwellnessadvisor.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyethicsandwellnessadvisor.yml
@@ -22,6 +22,7 @@
       skills:
         RMCSkillMedical: 1
         RMCSkillFireman: 2
+        RMCSkillFirearms: 1
         RMCSkillVehicles: 1
         RMCSkillDomestics: 1
     - type: JobPrefix
