--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyfoodserviceworker.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyfoodserviceworker.yml
@@ -24,6 +24,7 @@
         RMCSkillVehicles: 1
         RMCSkillDomestics: 2
         RMCSkillConstruction: 1
+        RMCSkillFirearms: 2
     - type: JobPrefix
       prefix: au14-job-prefix-civilianfoodserviceworker
     - type: TacticalMapIcon
