--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyfreightsystemsspecialist.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyfreightsystemsspecialist.yml
@@ -22,6 +22,7 @@
       skills:
         RMCSkillFireman: 1
         RMCSkillVehicles: 1
+        RMCSkillFirearms: 1
         RMCSkillDomestics: 1
         RMCSkillEngineer: 2
         RMCSkillConstruction: 2
