--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonynurse.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonynurse.yml
@@ -25,6 +25,7 @@
         RMCSkillDomestics: 1
         RMCSkillMedical: 2
         RMCSkillSurgery: 1
+        RMCSkillFirearms: 1
     - type: JobPrefix
       prefix: au14-job-prefix-nurse
     - type: TacticalMapIcon
