--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyphysician.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyphysician.yml
@@ -26,6 +26,7 @@
         RMCSkillMedical: 3
         RMCSkillResearch: 1
         RMCSkillSurgery: 2
+        RMCSkillFirearms: 1
     - type: JobPrefix
       prefix: au14-job-prefix-physician
     - type: TacticalMapIcon
