--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonywatsemanagementspecialist.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonywatsemanagementspecialist.yml
@@ -28,6 +28,7 @@
         RMCSkillEngineer: 2
         RMCSkillConstruction: 2
         RMCSkillPowerLoader: 2
+        RMCSkillFirearms: 1
     - type: JobPrefix
       prefix: au14-job-prefix-civilianwastemanagementspecialist
     - type: TacticalMapIcon
