--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycorporateliaison.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycorporateliaison.yml
@@ -35,6 +35,7 @@
         RMCSkillFireman: 1
         RMCSkillVehicles: 1
         RMCSkillDomestics: 1
+        RMCSkillFirearms: 1
     - type: JobPrefix
       prefix: au14-job-prefix-corporateliaison
     - type: TacticalMapIcon
