--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyecologist.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyecologist.yml
@@ -23,6 +23,7 @@
         RMCSkillFireman: 1
         RMCSkillVehicles: 1
         RMCSkillDomestics: 1
+        RMCSkillFirearms: 1
     - type: JobPrefix
       prefix: au14-job-prefix-civilianecologist
     - type: TacticalMapIcon
