--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyusafrecruiter.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyusafrecruiter.yml
@@ -27,6 +27,7 @@
         RMCSkillFirearms: 1
         RMCSkillFireman: 1
         RMCSkillJtac: 3
+        RMCSkillFirearms: 1
     - type: JobPrefix
       prefix: au14-job-prefix-usasfrecruiter
     - type: TacticalMapIcon
