--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonysynth.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonysynth.yml
@@ -31,6 +31,7 @@
         RMCSkillPilot: 2
         RMCSkillPolice: 2
         RMCSkillFireman: 5
+        RMCSkillFirearms: 1
         RMCSkillPowerLoader: 2
         RMCSkillVehicles: 2
         RMCSkillJtac: 3
