--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/SmartGuns/smart_gun.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/SmartGuns/smart_gun.yml
@@ -1,7 +1,7 @@
 ﻿- type: entity
   parent: [ CMBaseWeaponGun, BaseItem, RMCBaseAttachableHolder ]
   id: RMCSmartGun
-  name: ML66A smart gun
+  name: M56B smart gun
   description: The actual firearm in the Smart Gun System. Essentially a heavy, mobile machinegun.
   components:
   - type: Wieldable
@@ -167,14 +167,17 @@
 - type: entity
   parent: RMCSmartGun
   id: RMCSmartGunWhiteOut
-  name: ML79A smart gun
-  description: The actual firearm in the 4-piece ML79A Smartgun System. If you have this, you're about to bring some serious pain to anyone in your way. You may toggle firing restrictions by using a special action.
+  name: M56D smart gun
+  description: The actual firearm in the 4-piece M56D Smartgun System. If you have this, you're about to bring some serious pain to anyone in your way. You may toggle firing restrictions by using a special action.
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Weapons/Guns/SmartGuns/ml79a.rsi
     layers:
     - state: base
       sprite: _RMC14/Objects/Weapons/Guns/SmartGuns/ml79a.rsi
+    - sprite: _RMC14/Objects/Weapons/Guns/Attachments/barrel.rsi
+      state: d_ml66_barrel
+      offset: 0.65, 0
     - state: mag-0
       sprite: _RMC14/Objects/Weapons/Guns/SmartGuns/ml79a.rsi
       map: [ "enum.GunVisualLayers.Mag" ]
@@ -234,8 +237,8 @@
 - type: entity
   parent: RMCSmartGun
   id: RMCSmartGunCO
-  name: ML66B 'cavalier' smart gun
-  description: The actual firearm in the Smart Gun System. Back order only. Besides a more robust weapons casing, an ID lock system and a fancy paintjob, the gun's performance is identical to the standard-issue ML66A.
+  name: M56C 'cavalier' smart gun
+  description: The actual firearm in the Smart Gun System. Back order only. Besides a more robust weapons casing, an ID lock system and a fancy paintjob, the gun's performance is identical to the standard-issue M56B.
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Weapons/Guns/SmartGuns/CO.rsi # the game cries errors if i dont add blank camo sprites even though they dont fucking appear
@@ -275,8 +278,8 @@
 - type: entity
   parent: RMCSmartGun
   id: RMCSmartGunCLF
-  name: ML66B 'freedom' smart gun
-  description: The actual firearm in the 4-piece ML66B Smartgun System. Essentially a heavy, mobile machinegun. This one has the CLF logo carved over the manufacturing stamp.
+  name: M56B 'freedom' smart gun
+  description: The actual firearm in the 4-piece M56B Smartgun System. Essentially a heavy, mobile machinegun. This one has the CLF logo carved over the manufacturing stamp.
   components:
   - type: GunRequireEquipped
     whitelist: { }
@@ -284,8 +287,8 @@
 - type: entity
   parent: RMCSmartGun
   id: RMCSmartGunRoyal
-  name: ML66C 'royal' smart gun
-  description: The actual firearm in the 2-piece ML66C Smart Gun System. This Variant is used by the Three Sun Empires Royal Marines Commando units. You may toggle firing restrictions by using a special action.
+  name: L56A2 smart gun
+  description: The actual firearm in the 2-piece L56 Smart Gun System. This Variant is used by the Three Sun Empires Royal Marines Commando units. You may toggle firing restrictions by using a special action.
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Weapons/Guns/SmartGuns/ml66a_royal.rsi
@@ -322,7 +325,7 @@
 - type: entity
   parent: CMMagazineRifleBase
   id: RMCMagazineSmartGun
-  name: "ML66A drum magazine (10x30mm)"
+  name: "smartgun drum magazine (10x30mm)"
   components:
   - type: Tag
     tags:
@@ -347,7 +350,7 @@
 - type: entity
   parent: RMCMagazineSmartGun
   id: RMCMagazineSmartGunirradiated
-  name: "ML79A drum magazine irradiated (10x30mm)"
+  name: "smartgun drum magazine irradiated (10x30mm)"
   components:
   - type: BallisticAmmoProvider
     whitelist:
